--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,40 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* base set up------ */
+@layer base{
+   h1{
+    @apply text-3xl md:text-4xl font-bold
+  }
+h2{
+  @apply text-2xl md:text-3xl font-bold
+}
+p{
+  @apply text-lg md:text-xl font-bold
+}
+}
+
+
+/* Components set up------ */
+@layer components{
+ .Navbar {
+  @apply top-0 fixed z-50 flex justify-between my-auto py-5 px-3 lg:px-5 bg-gray-50 dark:text-white dark:bg-gray-900 w-full border-none
+ }
+ .nav-link{
+  @apply text-lg gap-6 flex cursor-pointer
+ }
+ .nav-items{
+  @apply hover:bg-blue-300 dark:hover:bg-green-400 text-gray-600 dark:text-white hover:ease-in-out px-3 py-1 rounded-md font-bold
+ }
+
+ .profile-image{
+  @apply mt-5 object-cover rounded-full ring-4 ring-blue-500 dark:ring-green-400 w-[200px] h-[200px] md:w-[250px] md:h-[250px] mx-auto
+ }
+ .btn{
+  @apply px-5 py-2 rounded-md border-2 bg-blue-600 text-white hover:bg-blue-700 dark:bg-green-400 dark:hover:bg-green-500
+ }
+ .btn-outline{
+  @apply ms-5 px-5 py-2 rounded-md border-blue-600 border-2 hover:bg-blue-600 hover:text-white dark:hover:bg-green-400 dark:border-green-400
+ }
+}
