--- a/src/index.css
+++ b/src/index.css
@@ -29,12 +29,12 @@ p{
  }
 
  .profile-image{
-  @apply mt-5 object-cover rounded-full ring-4 ring-blue-500 dark:ring-green-400 w-[200px] h-[200px] md:w-[250px] md:h-[250px] mx-auto
+  @apply mt-5 object-cover rounded-full ring-4 ring-blue-500 dark:ring-rose-500 w-[200px] h-[200px] md:w-[250px] md:h-[250px] mx-auto
  }
  .btn{
-  @apply px-5 py-2 rounded-md border-2 bg-blue-600 text-white hover:bg-blue-700 dark:bg-green-400 dark:hover:bg-green-500
+  @apply px-5 py-2 rounded-md bg-blue-600 text-white hover:bg-blue-700 dark:border-rose-500 dark:bg-rose-500 dark:hover:bg-rose-600
  }
  .btn-outline{
-  @apply ms-5 px-5 py-2 rounded-md border-blue-600 border-2 hover:bg-blue-600 hover:text-white dark:hover:bg-green-400 dark:border-green-400
+  @apply ms-5 px-5 py-2 rounded-md border-blue-600 border-2 hover:bg-blue-600 hover:text-white dark:hover:bg-rose-500 dark:border-rose-500
  }
 }
